--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,42 @@
 server.port=8082
 spring.application.name=api-gateway
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.routes[0].id=users-status-check
+spring.cloud.gateway.routes[0].uri = lb://users-ms
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users-ms/api/users/status/check
+spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+spring.cloud.gateway.routes[0].predicates[2]=Header=Authorization, Bearer (.*)
+spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
+spring.cloud.gateway.routes[0].filters[2]=AuthorizationHeaderFilter
+
+spring.cloud.gateway.routes[1].id = users-ms
+spring.cloud.gateway.routes[1].uri = lb://users-ms
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users-ms/api/users
+spring.cloud.gateway.routes[1].predicates[1]=Method=POST
+spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[2].id = users-ms-login
+spring.cloud.gateway.routes[2].uri = lb://users-ms
+spring.cloud.gateway.routes[2].predicates[0]=Path=/users-ms/api/login
+spring.cloud.gateway.routes[2].predicates[1]=Method=POST
+spring.cloud.gateway.routes[2].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[2].filters[1]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[3].id = users-ms-get-update-delete
+spring.cloud.gateway.routes[3].uri = lb://users-ms
+spring.cloud.gateway.routes[3].predicates[0]=Path=/users-ms/api/users/**
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET,PUT,DELETE
+spring.cloud.gateway.routes[3].predicates[2]=Header=Authorization, Bearer (.*)
+spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[3].filters[1]=AuthorizationHeaderFilter
+spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
+
+token.secret = hfgry463hf746hf573ydh475fhy5739
+
+spring.config.import=optional:configserver:http://localhost:8012
