Added support for distributed tracing using zipkin and sleuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,20 @@ spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[3].filters[1]=AuthorizationHeaderFilter
 spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
 
-token.secret = hfgry463hf746hf573ydh475fhy5739
+#spring.cloud.gateway.routes[4].id = users-ms-actuator
+#spring.cloud.gateway.routes[4].uri = lb://users-ms
+#spring.cloud.gateway.routes[4].predicates[0]=Path=/users-ms/actuator/**
+#spring.cloud.gateway.routes[4].predicates[1]=Method=GET
+#spring.cloud.gateway.routes[4].filters[0]=RemoveRequestHeader=Cookie
+#spring.cloud.gateway.routes[4].filters[1]=RewritePath=/users-ms/(?<segment>.*), /$\{segment}
+
+#token.secret = hfgry463hf746hf573ydh475fhy5739
 
 spring.config.import=optional:configserver:http://localhost:8012
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+management.endpoints.web.exposure.include=beans,health,routes,httptrace
