--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ms/(?<segment>.*), 
 
 #token.secret = hfgry463hf746hf573ydh475fhy5739
 
-spring.config.import=optional:configserver:http://localhost:8012
+spring.config.import=optional:configserver:http://172.31.6.9:8012
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
@@ -54,3 +54,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include=beans,health,routes,httptrace
+
+#spring.cloud.config.uri=http://localhost:8012
+#spring.cloud.config.uri=http://172.31.6.9:8012
+#spring.cloud.config.name=spring-cloud-config-server
